@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.pakee"
        name="Pakee"
-       version="1.0.18"
+       version="1.0.20"
        provider-name="pakee">
   <requires>
     <import addon="xbmc.python" version="2.0"/>
-    <import addon="script.module.beautifulsoup" version="3.0.8"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
             library="default.py">
         <provides>video</provides>
   </extension>
   <extension point="xbmc.addon.metadata">
-    <summary>Platform to browse and consume Pakistani media across devices</summary>
+    <summary>Platform to browse Pakistani media across devices</summary>
     <description>
 -Browse TV channels, TV shows, movies, actors, fashion, photography, sports, YouTube channels from Pakistan 
 -Browse musicians' albums, songs, Facebook albums, news and YouTube channels 
